syntax = "proto3";

package com.yobel.authms.grpc;

option java_multiple_files = true;
option java_package = "com.yobel.authms.grpc";

service AuthService {
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
  rpc GetUserDetails(UserDetailsRequest) returns (UserDetailsResponse) {}
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  UserDetails user_details = 2;
}

message UserDetailsRequest {
  string user_id = 1;
}

message UserDetailsResponse {
  UserDetails user_details = 1;
}

message UserDetails {
  string id = 1;
  string username = 2;
  string email = 3;
  repeated string roles = 4;
}